# TripPlanner-Crewai

./: README.md  api_app.py  app.py  pyproject.toml  requirements.txt
src/tripplanner/: tripplanner_agents.py
src/tripplanner/tools/: browser_tools.py  search_tools.py
